--- a/package.json
+++ b/package.json
@@ -34,5 +34,13 @@
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "@types/crypto-js": "^3.1.43",
+    "@types/jsbn": "^1.2.29",
+    "crypto-js": "^3.1.9-1",
+    "jsbn": "^1.1.0",
+    "jsencrypt": "travist/jsencrypt",
+    "leemon": "^6.2.0"
   }
 }
