--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,10 @@
     "emitDecoratorMetadata": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "target": "es2016",
+    "target": "esnext",
     "jsx": "react",
     "allowJs": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": false,
     "allowUnreachableCode": false,
     "declaration": false,
