--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.12.6",
+    "@types/pako": "^1.0.1",
     "@types/request": "^2.48.3",
     "awesome-typescript-loader": "^5.2.1",
     "closure-webpack-plugin": "^2.0.1",
@@ -50,6 +51,7 @@
     "jsbn": "^1.1.0",
     "jsencrypt": "travist/jsencrypt",
     "leemon": "^6.2.0",
+    "pako": "^1.0.10",
     "rusha": "^0.8.13",
     "ts-node": "^8.4.1",
     "worker-loader": "^2.0.0"
