--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "pako": "^1.0.10",
     "rusha": "^0.8.13",
     "ts-node": "^8.4.1",
+    "tsickle-loader": "^0.5.0",
     "worker-loader": "^2.0.0"
   }
 }
