--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,5 +39,7 @@
     "skipLibCheck": true,
     "lib": ["es2017", "es2018", "dom", "esnext"]
   },
+  "include": ["src/global.d.ts", "src/main.ts"],
+  "files": ["src/main.ts", "src/global.d.ts"],
   "exclude": ["dist", ".test", ".coverage", "config"]
 }
